# cet-units

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  release.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/overrides/: main.html
0.2.0/search/: search_index.json
develop/: 404.html  index.html  sitemap.xml
develop/search/: search_index.json
docs/: index.md
latest/: 404.html  index.html  sitemap.xml
latest/search/: search_index.json
scripts/: version-bump.sh
src/cet_units/: __init__.py  _cli.py  registry.py
src/cet_units/unit_definitions/: plain.txt
src/cet_units_generate/: __init__.py  _cli.py  _currencies.py  _emissions.py  _flows.py  cli.py  currencies.py  emissions.py  flows.py  imf_weo.parquet
src/cet_units_generate/data/: sources.bib
src/cet_units_generate/data/flows/: CH4.csv  CO2.csv  H2.csv  H2O.csv  MeOH.csv  NG.csv  NH3.csv  O2.csv  biomass.csv  coal.csv  crude_oil.csv
test-generate-tmp/currencies/: EUR.txt  USD.txt
test-generate-tmp/emissions/: AR4GWP100.txt  AR5CCFGWP100.txt  SARGWP100.txt  TARGWP500.txt  generic.txt  species.txt
tests/: __init__.py  test_generate.py  test_units.py
