[project]
name = "cet-units"
version = "0.1.0"
description = "Climate and Energy Transition Units: Unit definitions for analysis of energy systems and climate mitigation"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "globalwarmingpotentials>=0.13.1",
    "pint>=0.24.4",
    "pydeflate>=2.4.0",
    "pytest>=9.0.2",
]

[dependency-groups]
generate = [
    "pydeflate>=2.3.0.post0",
    "globalwarmingpotentials>=0.11.1",
]
dev = [
    "ruff>=0.14.10",
]
docs = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.7.1",
]

[project.scripts]
units-convert = "cet_units.cli:convert"
units-generate = "cet_units_generate.cli:generate"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cet_units"]
include-package-data = true

[tool.setuptools.package-data]
"cet_units" = ["unit_definitions/**"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]
